--- a/Project 05 COVID-19 in the US revisited.ipynb
+++ b/Project 05 COVID-19 in the US revisited.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project will walk you through the steps necessasry to recreate the datasets used in Project 3 from scratch. You will get some practice using the Pandas techniques you've learned so far this semester, learn a few new techniques, and get some exposure to the quirks of working with datasets out in the wild."
+    "This project will walk you through the steps necessary to recreate the datasets used in Project 3 from scratch. You will get some practice using the Pandas techniques you've learned so far this semester, learn a few new techniques, and get some exposure to the quirks of working with datasets out in the wild."
    ]
   },
   {
